# mlx-learning

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  OPTIMIZATION.md  QWEN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
bench-results/: README.md  m2pro-omlx-vs-vllm-mlx-20260503.md  m5-omlx-vs-vllm-mlx-nvfp4-20260503.md  m5-qwen3.6-27b-dense-4bit-20260630.md
scripts/: bootstrap.sh  detect_machine.sh  openai_proxy.py  verify_model.py  verify_model.sh
src/mlx_learning/: benchmark_cli.py  hello.py
tests/: test_hello.py
