[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-learning"
version = "0.1.0"
description = "A benchmark and learning tool for MLX and Ollama"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "mlx>=0.23.0",
    "mlx-lm>=0.23.0",
    "openai>=2.32.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.18.0",
]

[project.optional-dependencies]
server = [
    "huggingface-hub>=1.10.2",
    "mlx-vlm>=0.4.4",
]

[project.scripts]
mlx-bench = "mlx_learning.benchmark_cli:app"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.1",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"] # Ignore long lines (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
